Murphy System/outputs/workspace_output_1769719301_8879.txt
  File "/workspace/murphy_complete_integrated.py", line 1877
    global communication_hub
    ^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: name 'communication_hub' is assigned to before global declaration
